github_data_collector/src/data/issue_comment/pravic_winapi-kmd-rs.txt

I see in `Cargo.toml` that `license` is set to `"MIT"` but I don't see a `LICENSE` file anywhere in the repo or headers on any of the source/example files. Would it be possible to get these added?
Are they implemented yet?
I can't compile the project with latest nightly toolchain. And I'm newbie to rust, have no idea how to get this to work.
error like:
E:\prj\rust\kmd-env-rs\km\examples\01.minimal>cargo build --release
   Compiling core v0.0.0 (file:///E:/prj/rust/kmd-env-rs/libcore)
error[E0557]: feature has been removed
  --> E:\prj\rust\kmd-env-rs\libcore\lib.rs:77:12
   |
77 | #![feature(reflect)]
   |            ^^^^^^^
Is ReactOS with gcc supported?
